--- a/Hire-Shark/package.json
+++ b/Hire-Shark/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "hire-shark",
+  "version": "1.0.0",
+  "description": "",
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
@@ -8,5 +19,6 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
-  }
+  },
+  "devDependencies": {}
 }
